--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <li><a href="https://www.twitter.com/itsmeasmit"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href="https://www.linkedin.com/in/itsmeasmit"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                         <li><a href="https://www.tiktok.com/@itsmeasmit"><span class="ico-circle"><i class="bi bi-tiktok"></i></span></a></li>
-                        <li><a href="https://www.tiktok.com/@itsmeasmit"><span class="ico-circle"><i class="bi bi-youtube"></i></span></a></li>
+                        <li><a href="https://www.youtube.com/channel/UCQJmM8MM_pMuf5gmJHy2Mgg"><span class="ico-circle"><i class="bi bi-youtube"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
