see result sites

--- a/index.html
+++ b/index.html
@@ -82,6 +82,20 @@
                 <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
               </div>
               <div class="service-content">
+                <h2 class="s-title">SEE Results</h2>
+                <p class="s-description text-center">
+                  <a href="https://see.ntc.net.np/">SEE Result 2078/79 (site 1)</a> <br>
+                  <a href="https://results.ekantipur.com/see-results-with-marksheet.php">SEE Result 2078/79 (site 2)</a>
+                 </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
+              </div>
+              <div class="service-content">
                 <h2 class="s-title">Web Design</h2>
                 <p class="s-description text-center">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
