--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="line-mf1"></div> <br>
               <div class="row" style="display: inline-block" >
                   <a href="https://scratch.mit.edu/projects/520500554" target="_blank"> <h3>Simple Jumping Game</h3></a>
-                  <p>Click Green flag icon to play and Red icon to stop!</p>
+                  <p>Click Green flag icon to play and Red icon to stop! <br> [Touch the princess to jump]</p>
                 <iframe src="https://scratch.mit.edu/projects/520500554/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
               </div>
             </div>
