--- a/index.html
+++ b/index.html
@@ -300,12 +300,12 @@
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href="https://www.facebook.com/itsmeashmit"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href="https://www.instagram.com/itsmeasmit"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href="https://www.twitter.com/itsmeasmit"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href="https://www.linkedin.com/in/itsmeasmit"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
-                        <li><a href="https://www.tiktok.com/@itsmeasmit"><span class="ico-circle"><i class="bi bi-tiktok"></i></span></a></li>
-                        <li><a href="https://www.youtube.com/channel/UCQJmM8MM_pMuf5gmJHy2Mgg"><span class="ico-circle"><i class="bi bi-youtube"></i></span></a></li>
+                        <li><a href="https://www.facebook.com/itsmeashmit" target="_blank"><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/itsmeasmit" target="_blank"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="https://www.twitter.com/itsmeasmit" target="_blank"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/itsmeasmit" target="_blank"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+                        <li><a href="https://www.tiktok.com/@itsmeasmit" target="_blank"><span class="ico-circle"><i class="bi bi-tiktok"></i></span></a></li>
+                        <li><a href="https://www.youtube.com/channel/UCQJmM8MM_pMuf5gmJHy2Mgg" target="_blank"><span class="ico-circle"><i class="bi bi-youtube"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -326,7 +326,7 @@
         <div class="col-sm-12">
             <div class="credits">
               Copyright © Angel Acharya 2022. All Rights Reserved. <br>
-              Website by: <a href="https://www.facebook.com/itsmeashmit" style="color:black;">Angel Acharya</a>
+              Website by: <a href="https://www.facebook.com/itsmeashmit" target="_blank" style="color:black;">Angel Acharya</a>
             </div>
           </div>
       </div>
