--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#projects">My Projects</a></li>
+          <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -224,6 +225,26 @@
     </section><!-- End Projects Section -->
 
          
+          <!-- ======= Gallery Section ======= -->
+          <section id="gallery" class="services-mf pt-5 route">
+            <div class="container">
+              <div class="row">
+                <div class="title-box text-center">
+                  <h3 class="title-a">
+                    Gallery
+                  </h3>
+                  <div class="line-mf1"></div> <br>
+              </div>
+              <div class="row" style="display: inline-block" >
+                <iframe width="853" height="480" src="https://www.youtube.com/embed/Bjn2X2OKy6k" title="3rd Installation And Handover Ceremony Of Rotaract Club Of Central Siyari | Ashmit Acharya |" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+                </div>
+                
+         </div>
+      </div>
+
+    </section><!-- End Gallery Section -->
+
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route">
