--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Angel Acharya</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Student, Designer, Web Developer"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="An Engineering Student, Designer, Web Developer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
