--- a/index.html
+++ b/index.html
@@ -158,12 +158,7 @@
                 <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web Design</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
+                <h2 class="s-title"><br> Web Design</h2>
               </div>
             </div>
           </div>
@@ -173,12 +168,7 @@
                 <span class="ico-circle"><i class="bi bi-emoji-laughing"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Memes</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
+                <h2 class="s-title"><br> Memes</h2>
               </div>
             </div>
           </div>
@@ -188,12 +178,27 @@
                 <span class="ico-circle"><i class="bi bi-brightness-high"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Graphic Design</h2>
-                <p class="s-description text-center">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni adipisci eaque autem fugiat! Quia,
-                  provident vitae! Magni
-                  tempora perferendis eum non provident.
-                </p>
+              <h2 class="s-title"><br> Graphic Design</h2>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-camera-video"></i></span>
+              </div>
+              <div class="service-content">
+              <h2 class="s-title"><br> Video Editing</h2>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+              <span class="ico-circle"><i class="bi bi-bi bi-printer"></i></span>
+              </div>
+              <div class="service-content">
+              <a href="https://msonprinters.com.np" target="_blank"><h2 class="s-title"><br> Printing Services</h2></a>
               </div>
             </div>
           </div>
