--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
 
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3Y2FX3BV9P"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3Y2FX3BV9P');
+</script>
+
 <body>
 
   <!-- ======= Header ======= -->
