--- a/index.html
+++ b/index.html
@@ -165,23 +165,13 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
+                <span class="ico-circle"><i class="bi bi-laptop"></i></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title"><br> Web Design</h2>
               </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="service-box">
-              <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-emoji-laughing"></i></span>
-              </div>
-              <div class="service-content">
-                <h2 class="s-title"><br> Memes</h2>
-              </div>
-            </div>
-          </div>
+          </div>         
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
@@ -199,6 +189,26 @@
               </div>
               <div class="service-content">
               <h2 class="s-title"><br> Video Editing</h2>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title"><br> Digital Marketing</h2>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="service-box">
+              <div class="service-ico">
+                <span class="ico-circle"><i class="bi bi-emoji-laughing"></i></span>
+              </div>
+              <div class="service-content">
+                <h2 class="s-title"><br> Memes</h2>
               </div>
             </div>
           </div>
