--- a/index.html
+++ b/index.html
@@ -236,24 +236,24 @@
 
 
        <!-- ======= Projects Section ======= -->
-    <section id="projects" class="services-mf pt-5 route">
-      <div class="container">
-        <div class="box-shadow-full">
-          <div class="title-box text-center">
-            <h3 class="title-a">
-              My Projects
-            </h3>
-            <div class="line-mf1"></div> <br>
-        </div>
-              <div class="row" style="display: inline-block" >
-                  <a href="https://scratch.mit.edu/projects/520500554" target="_blank"> <h3>Jumping Japak</h3></a>
-                  <p>Click Green flag icon to play and Red icon to stop! <br> [Touch the princess to jump]</p>
-                <iframe src="https://scratch.mit.edu/projects/520500554/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+       <section id="projects" class="services-mf pt-5 route">
+        <div class="container">
+          <div class="box-shadow-full">
+              <div class="title-box text-center">
+                  <h3 class="title-a">
+                    My Projects
+                  </h3>
+                  <div class="line-mf1"></div> <br>
+                <div class="row" style="display: inline-block" >
+                    <a href="https://scratch.mit.edu/projects/520500554" target="_blank"> <h3>Jumping Japak</h3></a>
+                    <p>Click Green flag icon to play and Red icon to stop! <br> [Touch the princess to jump]</p>
+                  <iframe src="https://scratch.mit.edu/projects/520500554/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                </div>
               </div>
-            </div>
-         </div>
-      </section><!-- End Projects Section -->
-
+           </div>
+        </div>
+      </section>
+      <!-- End Projects Section -->
          
           <!-- ======= Gallery Section ======= -->
           
@@ -269,7 +269,7 @@
               <div class="row">
               <div class="row" style="display: inline-block" >
                <iframe width="853" height="480" src="https://www.youtube.com/embed/Bjn2X2OKy6k" title="3rd Installation And Handover Ceremony Of Rotaract Club Of Central Siyari | Ashmit Acharya |" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <p><br> <br> <br></p> 
+              <p><br> <br> <br> <br></p> 
               <video width="853" height="440" controls>
                 <source src="./assets/img/ourvid.mp4" type="video/mp4">
               </video>
