--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
-                      <div class="about-info">
+                      <div class="about-info"> <br> 
                         <p><span class="title-s">Name: </span> <span>Angel Acharya</span></p>
                         <p><span class="title-s">Profile: </span> <span>Front end Web developer</span></p>
                         <p><span class="title-s">Email: </span> <span>angelacharya241@gmail.com</span></p>
@@ -103,23 +103,27 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <span>Illustrator</span> <span class="pull-right">90%</span>
+                    <span>Illustrator</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Photoshop</span> <span class="pull-right">85%</span>
+                    <span>Photoshop</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Premiere Pro</span> <span class="pull-right">70%</span>
+                    <span>Premiere Pro</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>HTML</span> <span class="pull-right">70%</span>
+                    <span>Figma</span> <span class="pull-right"></span>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    <span>HTML</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>CSS</span> <span class="pull-right">80%</span>
+                    <span>CSS</span> <span class="pull-right"></span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -244,10 +248,9 @@
                     My Projects
                   </h3>
                   <div class="line-mf1"></div> <br>
-                <div class="row" style="display: inline-block" >
-                    <a href="https://scratch.mit.edu/projects/520500554" target="_blank"> <h3>Jumping Japak</h3></a>
-                    <p>Click Green flag icon to play and Red icon to stop! <br> [Touch the princess to jump]</p>
-                  <iframe src="https://scratch.mit.edu/projects/520500554/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                <div class="row" style="display: inline-block" > <br> 
+                  <br>
+                    <h4>COMING SOON..!</h4>
                 </div>
               </div>
            </div>
@@ -268,11 +271,7 @@
               </div>
               <div class="row">
               <div class="row" style="display: inline-block" >
-               <iframe width="853" height="480" src="https://www.youtube.com/embed/Bjn2X2OKy6k" title="3rd Installation And Handover Ceremony Of Rotaract Club Of Central Siyari | Ashmit Acharya |" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-              <p><br> <br> <br> <br></p> 
-              <video width="853" height="440" controls>
-                <source src="./assets/img/ourvid.mp4" type="video/mp4">
-              </video>
+              <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@itsmeasmit/video/7263796904742374657" data-video-id="7263796904742374657" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@itsmeasmit" href="https://www.tiktok.com/@itsmeasmit?refer=embed">@itsmeasmit</a> Madhaniyan❤️  <a title="butwalmuser" target="_blank" href="https://www.tiktok.com/tag/butwalmuser?refer=embed">#butwalmuser</a> <a title="asmit_acharya" target="_blank" href="https://www.tiktok.com/tag/asmit_acharya?refer=embed">#asmit_acharya</a> <a title="presentation" target="_blank" href="https://www.tiktok.com/tag/presentation?refer=embed">#presentation</a>  <a title="fypシ" target="_blank" href="https://www.tiktok.com/tag/fyp%E3%82%B7?refer=embed">#fypシ</a> <a title="tiktoknepal" target="_blank" href="https://www.tiktok.com/tag/tiktoknepal?refer=embed">#tiktoknepal</a> <a title="trending" target="_blank" href="https://www.tiktok.com/tag/trending?refer=embed">#trending</a> <a title="foryou" target="_blank" href="https://www.tiktok.com/tag/foryou?refer=embed">#foryou</a> <a title="nicesong" target="_blank" href="https://www.tiktok.com/tag/nicesong?refer=embed">#nicesong</a> <a title="engineering" target="_blank" href="https://www.tiktok.com/tag/engineering?refer=embed">#engineering</a> <a title="engineeringstudent" target="_blank" href="https://www.tiktok.com/tag/engineeringstudent?refer=embed">#engineeringstudent</a> <a title="computerscience" target="_blank" href="https://www.tiktok.com/tag/computerscience?refer=embed">#computerscience</a> <a target="_blank" title="♬ original sound - Ashmit Acharya" href="https://www.tiktok.com/music/original-sound-7263796963978529538?refer=embed">♬ original sound - Ashmit Acharya</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>        
               </div>
          </div>
       </div>
@@ -377,8 +376,7 @@
       <div class="row">
         <div class="col-sm-12">
             <div class="credits">
-              Copyright © Angel Acharya 2022. All Rights Reserved. <br>
-              Website by: <a href="https://www.facebook.com/itsmeashmit" target="_blank" style="color:black;">Angel Acharya</a>
+             Copyright © <a href="https://www.facebook.com/itsmeashmit" target="_blank" style="color:black;">Angel Acharya</a> 2023. All Rights Reserved.
             </div>
           </div>
       </div>
