--- a/index.html
+++ b/index.html
@@ -270,11 +270,13 @@
                   <div class="line-mf1"></div> <br>
               </div>
               <div class="row">
-              <div class="row" style="display: inline-block" >
-              <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@itsmeasmit/video/7263796904742374657" data-video-id="7263796904742374657" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@itsmeasmit" href="https://www.tiktok.com/@itsmeasmit?refer=embed">@itsmeasmit</a> Madhaniyan❤️  <a title="butwalmuser" target="_blank" href="https://www.tiktok.com/tag/butwalmuser?refer=embed">#butwalmuser</a> <a title="asmit_acharya" target="_blank" href="https://www.tiktok.com/tag/asmit_acharya?refer=embed">#asmit_acharya</a> <a title="presentation" target="_blank" href="https://www.tiktok.com/tag/presentation?refer=embed">#presentation</a>  <a title="fypシ" target="_blank" href="https://www.tiktok.com/tag/fyp%E3%82%B7?refer=embed">#fypシ</a> <a title="tiktoknepal" target="_blank" href="https://www.tiktok.com/tag/tiktoknepal?refer=embed">#tiktoknepal</a> <a title="trending" target="_blank" href="https://www.tiktok.com/tag/trending?refer=embed">#trending</a> <a title="foryou" target="_blank" href="https://www.tiktok.com/tag/foryou?refer=embed">#foryou</a> <a title="nicesong" target="_blank" href="https://www.tiktok.com/tag/nicesong?refer=embed">#nicesong</a> <a title="engineering" target="_blank" href="https://www.tiktok.com/tag/engineering?refer=embed">#engineering</a> <a title="engineeringstudent" target="_blank" href="https://www.tiktok.com/tag/engineeringstudent?refer=embed">#engineeringstudent</a> <a title="computerscience" target="_blank" href="https://www.tiktok.com/tag/computerscience?refer=embed">#computerscience</a> <a target="_blank" title="♬ original sound - Ashmit Acharya" href="https://www.tiktok.com/music/original-sound-7263796963978529538?refer=embed">♬ original sound - Ashmit Acharya</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>        
+                <div class="row" style="display: inline-block" >
+                  <iframe width="325" height="605" src="https://www.youtube.com/embed/xqEL6Og9erM?si=XfvefSp5izqvV7LN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                  <p><br> <br> <br> <br></p>
+                  <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@itsmeasmit/video/7263796904742374657" data-video-id="7263796904742374657" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@itsmeasmit" href="https://www.tiktok.com/@itsmeasmit?refer=embed">@itsmeasmit</a></section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
+                </div>
               </div>
-         </div>
-      </div>
+            </div>
     </div>
     </section>
     <!-- End Gallery Section -->
