--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
+  <!-- Thumbnail -->
+  <meta property='og:title' content='Angel Acharya'/>
+  <meta property='og:image' content='assets/img/angel.png'/>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>Angel Acharya</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
