--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Thumbnail -->
   <meta property='og:title' content='Angel Acharya'/>
-  <meta property='og:image' content='assets/img/angel.png'/>
+  <meta property='og:image' content='./assets/img/angel.png'/>
 
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
