--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <!-- Thumbnail -->
   <meta property='og:title' content='Angel Acharya'/>
   <meta property='og:image' content='./assets/img/angel.png'/>
-
+  <meta property='og:image:width' content='1200' />
+  <meta property='og:image:height' content='627' />
+  
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Angel Acharya</title>
